[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-compose-docs"
version = "1.0.0"
description = "Generate documentation for Docker Compose environment variables"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.0"
]

[project.scripts]
docker-compose-docs = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.py"]

[project.urls]
Homepage = "https://github.com/tonsV2/docker-compose-docs"
Repository = "https://github.com/tonsV2/docker-compose-docs.git"
Issues = "https://github.com/tonsV2/docker-compose-docs/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
lint = [
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]
